...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publisher_profile_page_building" />

    <Button
        android:id="@+id/subscribe_btn"
        android:layout_width="109dp"
        android:layout_height="41dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/btn_rounded"
        android:text="Subscribe"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
