...
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".StudentHome">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPublishers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
...
